Fix job workflows and UI handling